--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "less": "^4.1.1",
+    "less-loader": "^5.0.0",
     "vant": "^2.12.13",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@vant/area-data": "^1.0.0",
@@ -21,6 +25,7 @@
     "babel-plugin-import": "^1.13.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "less": "^4.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -37,10 +42,13 @@
     },
     "rules": {
       "vue/no-unused-components": "off",
-      "no-unused-vars": [2, { 
-        "vars": "local",
-        "args": "none" 
-      }]
+      "no-unused-vars": [
+        2,
+        {
+          "vars": "local",
+          "args": "none"
+        }
+      ]
     }
   },
   "browserslist": [
