--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.1",
     "less": "^4.1.1",
     "less-loader": "^5.0.0",
     "vant": "^2.12.13",
+    "vconsole": "^3.6.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1"
   },
@@ -26,6 +28,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "less": "^4.1.1",
+    "node-sass": "^6.0.0",
+    "sass-loader": "^10.2.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
