--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "element-ui": "^2.15.1",
     "less": "^4.1.1",
     "less-loader": "^5.0.0",
+    "tributejs": "^5.1.3",
     "v-viewer": "^1.6.3",
     "vant": "^2.12.13",
     "vconsole": "^3.6.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vue-tribute": "^1.0.7"
   },
   "devDependencies": {
     "@vant/area-data": "^1.0.0",
