--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vconsole": "^3.6.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
-    "vue-tribute": "^1.0.7"
+    "vue-tribute": "^1.0.7",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vant/area-data": "^1.0.0",
@@ -33,7 +34,8 @@
     "less": "^4.1.1",
     "node-sass": "^6.0.0",
     "sass-loader": "^10.2.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-dev-server": "^2.7.1"
   },
   "eslintConfig": {
     "root": true,
